--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,43 @@
 .App {
   text-align: center;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.page {
+  height: 80vh;
+  width: 40vw;
+  border: 1px solid black;
+  margin-top: 5vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+@media screen and (max-width: 710px) {
+  .game {
+    height: 95vh;
+    width: 100vw;
+    margin-top: 1vh;
+  }
+}
+
+.title {
+  border: 1px solid black;
+  font-size: 40px;
+}
+
+.form {
+  border: 1px solid black;
+}
+
+.submit {
+  border: 1px solid black;
 }
 
 code {
