--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,22 +1,29 @@
 .App {
   text-align: center;
 
+  height: 100vh;
+
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
+
+  background-color: rgb(39, 64, 138);
 }
 
 .page {
   height: 80vh;
   width: 40vw;
-  border: 1px solid black;
-  margin-top: 5vh;
+  border-radius: 2.5%;
+  margin-top: 3vh;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.484);
+  background-color: rgba(240, 248, 255, 0.484);
 }
 
 @media screen and (max-width: 710px) {
@@ -28,23 +35,31 @@
 }
 
 .title {
-  border: 1px solid black;
   font-size: 40px;
 }
 
 .form {
-  border: 1px solid black;
 }
 
 .submit {
+}
+
+.start-btn {
+  width: 15vw;
+  height: 5vh;
+
+  border-radius: 5%;
   border: 1px solid black;
+  background-color: rgba(128, 128, 128, 0.352);
+
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.showRace {
-  width: 50vw;
+.start-btn:hover {
+  cursor: pointer;
+  background-color: gray;
 }
