--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+
 .App {
   text-align: center;
 
@@ -9,6 +11,10 @@
   justify-content: center;
 
   background-color: rgb(39, 64, 138);
+
+  font-family: "Poetsen One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .page {
@@ -16,18 +22,28 @@
   width: 40vw;
   border-radius: 2.5%;
   margin-top: 3vh;
+  padding: 2vh;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: start;
 
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.484);
   background-color: rgba(240, 248, 255, 0.484);
 }
 
+.input-page, .show-page {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
 @media screen and (max-width: 710px) {
-  .game {
+  .page {
     height: 95vh;
     width: 100vw;
     margin-top: 1vh;
@@ -35,22 +51,35 @@
 }
 
 .title {
-  font-size: 40px;
+  font-size: 3rem;
+  pointer-events: none;
+}
+
+.description {
+  font-size: 1rem;
 }
 
 .form {
+  width: 100%;
 }
 
 .submit {
 }
 
+.form-input {
+  margin: 3%;
+  
+}
+
 .start-btn {
-  width: 15vw;
+  width: 10vw;
   height: 5vh;
 
-  border-radius: 5%;
+  border-radius: 8px;
   border: 1px solid black;
-  background-color: rgba(128, 128, 128, 0.352);
+  background-color: rgba(162, 169, 174, 0.63);
+
+  font-weight: bold;
 
   text-align: center;
   display: flex;
@@ -61,5 +90,21 @@
 
 .start-btn:hover {
   cursor: pointer;
-  background-color: gray;
+  background-color: rgb(110, 110, 123);
+}
+
+input {
+  height: 4vh;
+  width: 50%;
+  border-radius: 8px;
+  border: 1px solid black;
+  margin: 2%;
+
+  background-color: rgba(240, 248, 255, 0.361);
+
+  text-align: center;
+}
+
+.logo {
+  width: 5vw;
 }
