add game over message
add a message about if the desired was found or not

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -120,3 +120,11 @@ input {
   text-align: left;
   width: 80%;
 }
+
+.goodResult {
+  color: rgb(20, 156, 20);
+}
+
+.badResult {
+  color: rgb(156, 20, 20);
+}
